rgbds-0.6.1/test/asm/error-recovery.simple.err
error: error-recovery.asm(3):
    syntax error
error: error-recovery.asm(5) -> error-recovery.asm::REPT~1(7):
    syntax error
error: Assembly aborted (2 errors)!
