rgbds-0.6.1/test/asm/error-recovery.asm
	println "begin"

	println 42, 1 2 3 4

for n, 5
	println "start {d:n}"
	println syntax error
	println "finish {d:n}"
endr

	println "end {d:n}"
